--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "moment": "^2.29.1",
     "query-string": "^7.0.0",
     "react": "^17.0.1",
+    "react-alice-carousel": "^2.4.0",
     "react-dom": "^17.0.1",
     "react-input-mask": "^3.0.0-alpha.2",
     "react-scroll": "^1.8.2",
