--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "scripts": {
     "start": "NODE_ENV=development webpack serve",
     "build": "NODE_ENV=production webpack",
-    "start:ssr": "node server"
+    "start:ssr": "node server",
+    "bundle-report": "webpack-bundle-analyzer --port 5000 dist/stats.json"
   },
   "dependencies": {
     "@material-ui/core": "^4.11.3",
@@ -13,6 +14,7 @@
     "@material-ui/lab": "*",
     "mobx": "^6.2.0",
     "mobx-react": "^7.1.0",
+    "moment": "^2.29.1",
     "query-string": "^7.0.0",
     "react": "^17.0.2",
     "react-alice-carousel": "^2.4.0",
@@ -36,6 +38,7 @@
     "babel-loader": "^8.2.2",
     "babel-plugin-transform-class-properties": "^6.24.1",
     "babel-plugin-transform-decorators-legacy": "^1.3.5",
+    "compression-webpack-plugin": "^7.1.2",
     "copy-webpack-plugin": "^8.1.1",
     "css-loader": "^5.2.1",
     "file-loader": "^6.2.0",
@@ -46,6 +49,7 @@
     "react-router-dom": "^5.2.0",
     "sass-loader": "^11.0.1",
     "webpack": "^5.33.2",
+    "webpack-bundle-analyzer": "^4.4.1",
     "webpack-cli": "^4.6.0",
     "webpack-dev-server": "^3.11.2"
   }
