--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "node-sass": "^5.0.0",
     "react-router-dom": "^5.2.0",
     "sass-loader": "^11.0.1",
+    "ttf-loader": "^1.0.2",
     "webpack": "^5.33.2",
     "webpack-bundle-analyzer": "^4.4.1",
     "webpack-cli": "^4.6.0",
