--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
   "dependencies": {
     "@material-ui/core": "^4.11.3",
     "@material-ui/icons": "^4.11.2",
-    "@material-ui/lab": "*",
+    "google-map-react": "^2.1.9",
     "mobx": "^6.2.0",
     "mobx-react": "^7.1.0",
     "moment": "^2.29.1",
@@ -41,14 +41,22 @@
     "compression-webpack-plugin": "^7.1.2",
     "copy-webpack-plugin": "^8.1.1",
     "css-loader": "^5.2.1",
+    "envify": "^4.1.0",
     "file-loader": "^6.2.0",
     "html-webpack-plugin": "^5.3.1",
     "ignore-styles": "^5.0.1",
-    "mini-css-extract-plugin": "^1.4.1",
+    "mini-css-extract-plugin": "^1.5.0",
     "node-sass": "^5.0.0",
     "react-router-dom": "^5.2.0",
+    "rollup-plugin-commonjs": "^10.1.0",
+    "rollup-plugin-replace": "^2.2.0",
+    "rollup-plugin-terser": "^7.0.2",
     "sass-loader": "^11.0.1",
+    "terser": "^4.8.0",
+    "terser-brunch": "^4.0.0",
+    "terser-webpack-plugin": "^5.1.1",
     "ttf-loader": "^1.0.2",
+    "uglifyify": "^5.0.2",
     "webpack": "^5.33.2",
     "webpack-bundle-analyzer": "^4.4.1",
     "webpack-cli": "^4.6.0",
