--- a/package.json
+++ b/package.json
@@ -9,6 +9,10 @@
     "bundle-report": "webpack-bundle-analyzer --port 5000 dist/stats.json"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^1.2.35",
+    "@fortawesome/free-regular-svg-icons": "^5.15.3",
+    "@fortawesome/free-solid-svg-icons": "^5.15.3",
+    "@fortawesome/react-fontawesome": "^0.1.14",
     "@material-ui/core": "^4.11.3",
     "@material-ui/icons": "^4.11.2",
     "mobx": "^6.2.0",
