--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@material-ui/core": "^4.11.3",
     "@material-ui/icons": "^4.11.2",
     "@material-ui/lab": "*",
+    "axios": "^0.21.1",
     "mobx": "^6.2.0",
     "mobx-react": "^7.1.0",
     "moment": "^2.29.1",
