--- a/package.json
+++ b/package.json
@@ -23,11 +23,11 @@
     "moment": "^2.29.1",
     "query-string": "^7.0.0",
     "react": "^17.0.2",
-    "react-alice-carousel": "^2.4.0",
     "react-dom": "^17.0.2",
     "react-helmet": "^6.1.0",
     "react-input-mask": "^3.0.0-alpha.2",
     "react-scroll": "^1.8.2",
+    "swiper": "^6.6.2",
     "url-loader": "^4.1.1"
   },
   "devDependencies": {
