--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "react-helmet": "^6.1.0",
     "react-input-mask": "^3.0.0-alpha.2",
     "react-scroll": "^1.8.2",
+    "react-transition-group": "^4.4.2",
     "swiper": "^6.6.2",
     "url-loader": "^4.1.1"
   },
