--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@material-ui/lab": "*",
     "axios": "^0.24.0",
     "compression": "^1.7.4",
+    "firebase": "^9.6.0",
     "mobx": "^6.3.8",
     "mobx-react": "^7.2.1",
     "moment": "^2.29.1",
