--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "react-dom": "^17.0.2",
     "react-helmet": "^6.1.0",
     "react-input-mask": "^3.0.0-alpha.2",
+    "react-lazyload": "^3.2.0",
     "react-scroll": "^1.8.4",
     "react-transition-group": "^4.4.2",
     "swiper": "^6.6.2",
