--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "mobx": "^6.3.12",
     "mobx-react": "^7.2.1",
     "moment": "^2.29.1",
+    "postcss-loader": "^6.2.1",
     "query-string": "^7.1.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
