--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@material-ui/lab": "*",
     "axios": "^0.25.0",
     "compression": "^1.7.4",
+    "css-minimizer-webpack-plugin": "^3.4.1",
     "firebase": "^9.6.3",
     "mobx": "^6.3.12",
     "mobx-react": "^7.2.1",
