--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "bundle-report": "webpack-bundle-analyzer --port 5000 dist/stats.json"
   },
   "dependencies": {
+    "@emotion/react": "^11.9.3",
+    "@emotion/styled": "^11.9.3",
     "@fortawesome/fontawesome-svg-core": "^6.1.1",
     "@fortawesome/free-brands-svg-icons": "^6.1.1",
     "@fortawesome/free-regular-svg-icons": "^6.1.1",
@@ -19,6 +21,10 @@
     "@material-ui/core": "^4.12.4",
     "@material-ui/icons": "^4.11.3",
     "@material-ui/lab": "*",
+    "@mui/icons-material": "^5.8.4",
+    "@mui/lab": "^5.0.0-alpha.86",
+    "@mui/material": "^5.8.4",
+    "@mui/styles": "^5.8.4",
     "axios": "^0.27.2",
     "compression": "^1.7.4",
     "css-minimizer-webpack-plugin": "^4.0.0",
@@ -62,7 +68,7 @@
     "envify": "^4.1.0",
     "html-webpack-plugin": "^5.5.0",
     "ignore-styles": "^5.0.1",
-    "mini-css-extract-plugin": "^2.6.0",
+    "mini-css-extract-plugin": "^2.6.1",
     "node-sass": "^7.0.1",
     "react-router-dom": "^5.3.0",
     "sass-loader": "^13.0.0",
