--- a/package.json
+++ b/package.json
@@ -29,6 +29,8 @@
     "mobx": "^6.6.1",
     "mobx-react": "^7.5.1",
     "moment": "^2.29.3",
+    "moment-locales-webpack-plugin": "^1.2.0",
+    "moment-timezone-data-webpack-plugin": "^1.5.0",
     "postcss-loader": "^7.0.0",
     "query-string": "^7.1.1",
     "react": "^17.0.2",
