--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "moment": "^2.29.4",
     "moment-locales-webpack-plugin": "^1.2.0",
     "moment-timezone-data-webpack-plugin": "^1.5.0",
+    "path-browserify": "^1.0.1",
     "postcss-loader": "^7.0.1",
     "query-string": "^7.1.1",
     "react": "^17.0.2",
