--- a/package.json
+++ b/package.json
@@ -21,6 +21,8 @@
     "@material-ui/core": "^4.12.4",
     "@material-ui/icons": "^4.11.3",
     "@material-ui/lab": "*",
+    "@mui/material": "^5.9.0",
+    "@mui/styled-engine-sc": "^5.8.0",
     "axios": "^0.27.2",
     "compression": "^1.7.4",
     "css-minimizer-webpack-plugin": "^4.0.0",
@@ -41,6 +43,7 @@
     "react-lazyload": "^3.2.0",
     "react-scroll": "^1.8.7",
     "react-transition-group": "^4.4.2",
+    "styled-components": "^5.3.5",
     "swiper": "^6.6.2",
     "url-loader": "^4.1.1",
     "web-vitals": "^2.1.4"
