--- a/package.json
+++ b/package.json
@@ -70,6 +70,7 @@
     "copy-webpack-plugin": "^11.0.0",
     "css-loader": "^6.7.1",
     "envify": "^4.1.0",
+    "html-loader": "^4.1.0",
     "html-webpack-plugin": "^5.5.0",
     "ignore-styles": "^5.0.1",
     "mini-css-extract-plugin": "^2.6.1",
