--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@mui/icons-material": "^5.8.4",
     "@mui/material": "^5.9.1",
     "@mui/styled-engine-sc": "^5.8.0",
+    "@react-spring/web": "^9.5.1",
     "axios": "^0.27.2",
     "compression": "^1.7.4",
     "css-minimizer-webpack-plugin": "^4.0.0",
