--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "@loadable/component": "^5.15.2",
     "@loadable/server": "^5.15.2",
     "@mui/icons-material": "^5.8.4",
-    "@mui/material": "^5.9.1",
+    "@mui/material": "^5.9.2",
     "@mui/styled-engine-sc": "^5.8.0",
     "@react-spring/web": "^9.5.2",
     "axios": "^0.27.2",
@@ -36,6 +36,7 @@
     "postcss-loader": "^7.0.1",
     "query-string": "^7.1.1",
     "react": "^17.0.2",
+    "react-auth-code-input": "^3.2.1",
     "react-dom": "^17.0.2",
     "react-helmet": "^6.1.0",
     "react-input-mask": "^3.0.0-alpha.2",
@@ -73,7 +74,7 @@
     "react-router-dom": "^5.3.0",
     "sass-loader": "^13.0.2",
     "uglifyify": "^5.0.2",
-    "webpack": "^5.73.0",
+    "webpack": "^5.74.0",
     "webpack-bundle-analyzer": "^4.5.0",
     "webpack-cli": "^4.10.0",
     "webpack-dev-server": "^4.9.3"
