--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@react-spring/web": "^9.5.2",
     "axios": "^0.27.2",
     "compression": "^1.7.4",
+    "css-mediaquery": "^0.1.2",
     "css-minimizer-webpack-plugin": "^4.0.0",
     "file-loader": "^6.2.0",
     "firebase": "^9.9.4",
@@ -47,17 +48,17 @@
     "web-vitals": "^3.0.1"
   },
   "devDependencies": {
-    "@babel/core": "^7.18.13",
+    "@babel/core": "^7.19.0",
     "@babel/plugin-proposal-class-properties": "^7.18.6",
-    "@babel/plugin-proposal-decorators": "^7.18.10",
+    "@babel/plugin-proposal-decorators": "^7.19.0",
     "@babel/plugin-proposal-object-rest-spread": "^7.18.9",
     "@babel/plugin-transform-arrow-functions": "^7.18.6",
     "@babel/plugin-transform-async-to-generator": "^7.18.6",
     "@babel/plugin-transform-runtime": "^7.18.10",
-    "@babel/preset-env": "^7.18.10",
+    "@babel/preset-env": "^7.19.0",
     "@babel/preset-react": "^7.18.6",
     "@babel/register": "^7.18.9",
-    "@babel/runtime": "^7.18.9",
+    "@babel/runtime": "^7.19.0",
     "@loadable/babel-plugin": "^5.13.2",
     "@loadable/webpack-plugin": "^5.15.2",
     "babel-loader": "^8.2.5",
