--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "react-scroll": "^1.8.7",
     "react-transition-group": "^4.4.5",
     "styled-components": "^5.3.5",
+    "ua-parser-js": "^1.0.2",
     "url-loader": "^4.1.1",
     "web-vitals": "^3.0.1"
   },
