--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "@loadable/component": "^5.15.3",
     "@loadable/server": "^5.15.3",
     "@mui/icons-material": "^5.11.16",
-    "@mui/material": "^5.12.3",
+    "@mui/material": "^5.13.3",
     "@mui/styled-engine-sc": "^5.12.0",
     "@react-spring/web": "^9.7.2",
     "axios": "^0.27.2",
@@ -27,39 +27,40 @@
     "css-mediaquery": "^0.1.2",
     "css-minimizer-webpack-plugin": "^5.0.0",
     "file-loader": "^6.2.0",
-    "firebase": "^9.21.0",
+    "firebase": "^9.22.1",
     "mobx": "^6.9.0",
     "mobx-react": "^7.6.0",
     "moment": "^2.29.4",
     "moment-locales-webpack-plugin": "^1.2.0",
     "moment-timezone-data-webpack-plugin": "^1.5.1",
     "path-browserify": "^1.0.1",
-    "postcss-loader": "^7.3.0",
+    "postcss-loader": "^7.3.2",
     "query-string": "^7.1.3",
     "react": "^17.0.2",
     "react-auth-code-input": "^3.2.1",
     "react-dom": "^17.0.2",
     "react-helmet": "^6.1.0",
     "react-input-mask": "^3.0.0-alpha.2",
+    "react-roulette-pro": "^3.1.0",
     "react-scroll": "^1.8.9",
     "react-transition-group": "^4.4.5",
     "styled-components": "^5.3.9",
     "ua-parser-js": "^1.0.35",
     "url-loader": "^4.1.1",
-    "web-vitals": "^3.3.1"
+    "web-vitals": "^3.3.2"
   },
   "devDependencies": {
-    "@babel/core": "^7.21.8",
+    "@babel/core": "^7.22.1",
     "@babel/plugin-proposal-class-properties": "^7.18.6",
-    "@babel/plugin-proposal-decorators": "^7.21.0",
+    "@babel/plugin-proposal-decorators": "^7.22.3",
     "@babel/plugin-proposal-object-rest-spread": "^7.20.7",
     "@babel/plugin-transform-arrow-functions": "^7.21.5",
     "@babel/plugin-transform-async-to-generator": "^7.20.7",
-    "@babel/plugin-transform-runtime": "^7.21.4",
-    "@babel/preset-env": "^7.21.5",
-    "@babel/preset-react": "^7.18.6",
+    "@babel/plugin-transform-runtime": "^7.22.4",
+    "@babel/preset-env": "^7.22.4",
+    "@babel/preset-react": "^7.22.3",
     "@babel/register": "^7.21.0",
-    "@babel/runtime": "^7.21.5",
+    "@babel/runtime": "^7.22.3",
     "@loadable/babel-plugin": "^5.15.3",
     "@loadable/webpack-plugin": "^5.15.2",
     "babel-loader": "^9.1.2",
@@ -67,18 +68,18 @@
     "babel-plugin-transform-decorators-legacy": "^1.3.5",
     "compression-webpack-plugin": "^10.0.0",
     "copy-webpack-plugin": "^11.0.0",
-    "css-loader": "^6.7.3",
+    "css-loader": "^6.8.1",
     "envify": "^4.1.0",
     "html-webpack-plugin": "^5.5.1",
     "ignore-styles": "^5.0.1",
-    "mini-css-extract-plugin": "^2.7.5",
-    "node-sass": "^7.0.3",
+    "mini-css-extract-plugin": "^2.7.6",
+    "node-sass": "^8.0.0",
     "react-router-dom": "^5.3.0",
-    "sass-loader": "^13.2.2",
+    "sass-loader": "^13.3.1",
     "uglifyify": "^5.0.2",
-    "webpack": "^5.82.0",
-    "webpack-bundle-analyzer": "^4.8.0",
-    "webpack-cli": "^5.1.0",
-    "webpack-dev-server": "^4.14.0"
+    "webpack": "^5.85.0",
+    "webpack-bundle-analyzer": "^4.9.0",
+    "webpack-cli": "^5.1.3",
+    "webpack-dev-server": "^4.15.0"
   }
 }
